syntax = "proto3";

package protomodels;

import "google/protobuf/timestamp.proto";

message Card{
    CardIndex                 index             = 1;
    repeated string           labels            = 2;
    repeated string           explanations      = 3;
    repeated string           example_sentences = 4;
    // where 0 means not familiar at all, 10 means very familiar
    int32                     familiarity       = 5;
    google.protobuf.Timestamp review_date       = 6;
}

message RelatedCards{
    repeated CardIndex synonyms           = 1;
    repeated CardIndex antonyms           = 2;
    CardIndex          origin             = 3;
    repeated CardIndex derivatives        = 4;
    repeated CardIndex in_other_languages = 5;
    repeated CardIndex others             = 6;
}

message CardIndex{
    string   name     = 1;
    Language language = 2;
}

enum Language{
    ENGLISH  = 0;
    JAPANESE = 1;
    FRENCH   = 2;
}

enum AssociationTypes{
    SYNONYMS           = 0;
    ANTONYMS           = 1;
    ORIGIN             = 2;
    DERIVATIVES        = 3;
    IN_OTHER_LANGUAGES = 4;
    OTHERS             = 5;
}